<resources>

    <string name="app_name">Vis inspection</string>
    <!--MAIN-->
    <!--Main Top bar-->
    <string name="tv_tb_main_finish">Finish</string>
    <string name="tv_tb_main_vehicle_details">Vehicle Details</string>
    <string name="tab_evaluation_inspection">Inspection</string>
    <string name="tab_evaluation_photos">Photos</string>
    <string name="tab_evaluation_damages">Damages</string>
    <string name="alert_warning_closing">By closing this screen you will loose all not committed changes</string>
    <string name="alert_need_initial_values_needed">We need the initial values</string>

    <!--SEARCH-->
    <!--Search Screen-->
    <string name="btn_search_label">search</string>
    <string name="search_registration_or_vin">Search registration or VIN</string>
    <string name="search_no_inspection">No Inspections</string>
    <string name="inspection_item_vin_label">VIN/Chassis: </string>
    <string name="today_inspections_label">Today</string>

    <!--INSPECTION-->
    <!--Inspection tabs-->
    <string name="tab_vehicle">Vehicle</string>
    <string name="tab_tyres">Tyres</string>
    <string name="tab_servicing">Servicing</string>
    <string name="tab_accessories">Accessories</string>
    <string name="tab_others">Others</string>

    <!--Inspection Vehicle-->
    <string name="hint_make">Make</string>
    <string name="hint_model">Model</string>
    <string name="hint_registration">Registration</string>
    <string name="hint_registration_state">Registration state</string>
    <string name="hint_vin">VIN</string>
    <string name="master_key_and_remote">Master Key &amp; Remote</string>
    <string name="spare_key_and_remote">Spare Key &amp; Remote</string>
    <string name="hint_derivative">Derivative</string>
    <string name="hint_reg_exp_date">Registration expiry date</string>
    <string name="hint_odometer">Odometer</string>

    <!--Inspection Tyres-->
    <string name="label_tyre_lsf">LSF</string>
    <string name="label_tyre_rsf">RSF</string>
    <string name="label_tyre_rsr">RSR</string>
    <string name="label_tyre_lsr">LSR</string>
    <string name="label_tyre_spare">Spare</string>
    <string name="locking_wheel_nut">Locking Wheel Nut</string>

    <!--Inspection Servicing-->
    <string name="sw_label_service_book">Service Book</string>
    <string name="sw_label_service_require">Service Require</string>
    <string name="hint_service_history">Service History</string>
    <string name="hint_last_service_odometer">Last Service Odometer</string>
    <string name="hint_last_service_date">Last Service Date</string>

    <!--Inspection Accessories-->
    <string name="sw_label_owners_manual">Owners Manual</string>
    <string name="sw_label_e_tag">e-Tag</string>
    <string name="sw_label_fuel_tag">Fuel Tag</string>
    <string name="sw_label_sat_nav">Satellite Navigation</string>
    <string name="sw_label_reverse_camera">Reverse Camera</string>
    <string name="sw_label_front_park_sens">Front Parking Sensors</string>
    <string name="sw_label_rear_parking_sens">Rear Parking Sensors</string>
    <string name="sw_label_auto_park">Auto Park</string>
    <string name="sw_label_tow_bar">Towbar</string>

    <!--Inspection Damage-->
    <string name="label_exterior">Exterior</string>
    <string name="label_interior">Interior</string>
    <string name="btn_label_cancel">Cancel</string>
    <string name="btn_label_save">Save</string>
    <string name="damage_check_switch_text">I have inspected the interior of the inspectionLiveData and \n recorded any damage present</string>

    <!--Splash-->
    <string name="alert_retry">Retry</string>

    <!--Login-->
    <string name="btn_label_login">Log in</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email address</string>
    <string name="til_error_email">Not a valid email</string>
    <string name="til_error_password">Insert a password of at least 6 digits</string>
    <string name="alert_attention">Attention</string>
    <string name="dismiss">Dismiss</string>
    <string name="login_error">Error happened during login</string>
    <string name="login_app_title">Vehicle Inspection System</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_contact">Contact your administrator to get access.</string>

    <!--Photos Tab-->
    <string name="photos_dialog_camera">Take a photo</string>
    <string name="photos_dialog_gallery">Select from gallery</string>
    <string name="photos_dialog_loading">Loading..</string>
    <string name="search_screen_title">Vehicle Inspection System</string>
    <string name="search_btn_sync_all">Sync All</string>

    <!--Vehicle Details-->
    <string name="vehicle_details">Vehicle Details</string>
    <string name="vehicle_make">Make</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_derivative">Derivative</string>
    <string name="vehicle_build_year">Build year</string>
    <string name="vehicle_body_type">Body type</string>
    <string name="vehicle_fuel">Fuel</string>
    <string name="vehicle_transmission">Transmission</string>
    <string name="vehicle_seats">Seats</string>
    <string name="vehicle_doors">Doors</string>
    <string name="vehicle_driver_side">Driver side</string>
    <string name="vehicle_engine_number">Engine number</string>
    <string name="vehicle_drive">Drive</string>
    <string name="vehicle_gears">Gears</string>
    <string name="vehicle_factory_options">Factory Options</string>
    <string name="vehicle_close">Close</string>
    <string name="inspection_tyre_edit_text_depth_hint">Depth</string>
</resources>
