<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

    </data>

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_tabs_inspection"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingEnd="@dimen/padding_horizontal_inset_screen"
            android:paddingStart="@dimen/padding_horizontal_inset_screen"
            android:paddingTop="@dimen/padding_horizontal_inset_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@android:color/holo_green_dark">

            <android.support.design.widget.TabLayout
                android:id="@+id/tl_inspection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@android:color/holo_red_dark">

                <android.support.design.widget.TabItem
                    android:id="@+id/tab_vehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/tab_vehicle" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tab_tyres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/tab_tyres" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tab_servicing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/tab_servicing" />

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/tab_accessories" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tab_others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/tab_others" />
            </android.support.design.widget.TabLayout>
        </android.support.v4.view.ViewPager>

    </android.support.constraint.ConstraintLayout>
</layout>