<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="826dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/sw_service_book"
            style="@style/AppSwitch"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_min_height"
            android:layout_marginEnd="@dimen/guideline_margin_inspection"
            android:layout_marginTop="@dimen/top_margin_vertical_inset_inspection_screens"
            android:text="@string/sw_label_service_book"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/sw_service_require"
            style="@style/AppSwitch"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_min_height"
            android:layout_marginEnd="@dimen/guideline_margin_inspection"
            android:layout_marginTop="32dp"
            android:text="@string/sw_label_service_require"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/sw_service_book"
            app:layout_constraintTop_toBottomOf="@+id/sw_service_book" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_service_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/sw_service_require"
            app:layout_constraintTop_toBottomOf="@+id/sw_service_require">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_service_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_service_history" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_last_service_odometer"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginEnd="@dimen/guideline_margin_inspection"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_service_history">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_last_service_odometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_service_odometer" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_last_service_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/guideline_margin_inspection"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_last_service_odometer">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_service_date" />
        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/sw_owners_manual"
            style="@style/AppSwitch"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_min_height"
            android:layout_marginStart="@dimen/guideline_margin_inspection"
            android:layout_marginTop="32dp"
            android:text="@string/sw_label_owners_manual"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintBottom_toBottomOf="@+id/sw_service_book"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/sw_e_tag"
            style="@style/AppSwitch"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_min_height"
            android:layout_marginStart="@dimen/guideline_margin_inspection"
            android:text="@string/sw_label_e_tag"
            app:layout_constraintBottom_toBottomOf="@+id/sw_service_require"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/sw_service_require" />

        <Switch
            android:id="@+id/sw_fuel_tag"
            style="@style/AppSwitch"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_min_height"
            android:layout_marginStart="@dimen/guideline_margin_inspection"
            android:text="@string/sw_label_fuel_tag"
            app:layout_constraintBottom_toBottomOf="@+id/til_service_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/til_service_history" />
    </android.support.constraint.ConstraintLayout>
</layout>